5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1863_1291.log
== TEST (2019-07-02 11:04:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:04:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:05:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= round(dot(inv(c),mt.T),0)
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:05:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
r1=round(r)
print(r,r1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:05:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
r1=round(r)
print(r,r1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:08:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=shape(r)[0]
b=shape(r[1])
c=shape(r[2])
d=shape(r[3])
print(r)
print(a,b,c,d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:08:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=shape(r)[0]
b=shape(r[1])
c=shape(r[2])
print(r)
print(a,b,c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:08:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=shape(r)[0]
b=shape(r)[1]
c=shape(r)[2]
print(r)
print(a,b,c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:09:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:09:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
print(r)
print(shape(r)[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:10:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
print(r)
print(r[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:11:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=(r)[0]
b=(r)[1]
c=(r)[2]
a1=int(a)
b1=int(b)
c1=int(c)
print(r)
print(a1,b1,c1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:12:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=(r)[0]
b=(r)[1]
c=(r)[2]
a1=int(a)
b1=int(b)
c1=int(c)
print("regular:",a1)
print("ortopedico:",b1)
print("infantil:",c1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:12:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=(r)[0]
b=(r)[1]
c=(r)[2]
a1=float(a)
b1=float(b)
c1=float(c)
print("regular:",a1)
print("ortopedico:",b1)
print("infantil:",c1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:13:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=(r)[0]
b=(r)[1]
c=(r)[2]
a1=int(a)
b1=int(b)
c1=int(c)
print("regular:",a1)
print("ortopedico:",b1)
print("infantil:",c1)
print(min(r))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:14:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=(r)[0]
b=(r)[1]
c=(r)[2]
a1=int(a)
b1=int(b)
c1=int(c)
print("regular:",a1)
print("ortopedico:",b1)
print("infantil:",c1)
if min(r)==a:
	print("regular")
elif min(r)==b:
	print("ortopedico")
elifmin(r)==c:
	print("infantil")
-- ERROR:
File "XXXX", line 19
    elifmin(r)==c:
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:14:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=(r)[0]
b=(r)[1]
c=(r)[2]
a1=int(a)
b1=int(b)
c1=int(c)
print("regular:",a1)
print("ortopedico:",b1)
print("infantil:",c1)
if min(r)==a:
	print("regular")
elif min(r)==b:
	print("ortopedico")
elif min(r)==c:
	print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:15:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=(r)[0]
b=(r)[1]
c=(r)[2]
a1=int(a)
b1=int(b)
c1=int(c)
print("regular:",a1)
print("ortopedico:",b1)
print("infantil:",c1)
if min(r)==a:
	print("regular")
elif min(r)==b:
	print("ortopedico")
elif min(r)==c:
	print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:15:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=(r)[0]
b=(r)[1]
c=(r)[2]
a1=int(a)
b1=int(b)
c1=int(c)
print("regular:",a1)
print("ortopedico:",b1)
print("infantil:",c1)
if min(r)==a:
	print("regular")
elif min(r)==b:
	print("ortopedico")
elif min(r)==c:
	print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:15:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=(r)[0]
b=(r)[1]
c=(r)[2]
a1=int(a)
b1=int(b)
c1=int(c)
print("regular:",a1)
print("ortopedico:",b1)
print("infantil:",c1)
if min(r)==a:
	print("regular")
elif min(r)==b:
	print("ortopedico")
elif min(r)==c:
	print("infantil")
-- EXECUTION TIME:
0.952138
-- TEST CASE 1:
---- input:
[623980,350700,134591]
---- correct output:
regular: 1212.0
ortopedico: 3265.0
infantil: 9187.0
regular
---- user output:
regular: 1212
ortopedico: 3264
infantil: 9186
regular
-- TEST CASE 2:
---- input:
[375920,219120,80734]
---- correct output:
regular: 2532.0
ortopedico: 1850.0
infantil: 3458.0
ortopedico
---- user output:
regular: 2532
ortopedico: 1849
infantil: 3457
ortopedico
-- TEST CASE 3:
---- input:
[994800,620500,221415]
---- correct output:
regular: 9650.0
ortopedico: 7485.0
infantil: 1580.0
infantil
---- user output:
regular: 9650
ortopedico: 7484
infantil: 1579
infantil
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:15:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=(r)[0]
b=(r)[1]
c=(r)[2]
a1=int(a)
b1=int(b)
c1=int(c)
print("regular:",a1)
print("ortopedico:",b1)
print("infantil:",c1)
if min(r)==a:
	print("regular")
elif min(r)==b:
	print("ortopedico")
elif min(r)==c:
	print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:17:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=(r)[0]
b=(r)[1]
c=(r)[2]
a1=(a)
b1=(b)
c1=(c)
print("regular:",a1)
print("ortopedico:",b1)
print("infantil:",c1)
if min(r)==a:
	print("regular")
elif min(r)==b:
	print("ortopedico")
elif min(r)==c:
	print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:17:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(int(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=(r)[0]
b=(r)[1]
c=(r)[2]
a1=(a)
b1=(b)
c1=(c)
print("regular:",a1)
print("ortopedico:",b1)
print("infantil:",c1)
if min(r)==a:
	print("regular")
elif min(r)==b:
	print("ortopedico")
elif min(r)==c:
	print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:17:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=(r)[0]
b=(r)[1]
c=(r)[2]
a1=(a)
b1=(b)
c1=(c)
print("regular:",a1)
print("ortopedico:",b1)
print("infantil:",c1)
if min(r)==a:
	print("regular")
elif min(r)==b:
	print("ortopedico")
elif min(r)==c:
	print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:18:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=(r)[0]
b=(r)[1]
c=(r)[2]
a1=float(a)
b1=(b)
c1=(c)
print("regular:",a1)
print("ortopedico:",b1)
print("infantil:",c1)
if min(r)==a:
	print("regular")
elif min(r)==b:
	print("ortopedico")
elif min(r)==c:
	print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:18:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=(r)[0]
b=(r)[1]
c=(r)[2]
a1=round((a),1)
b1=(b)
c1=(c)
print("regular:",a1)
print("ortopedico:",b1)
print("infantil:",c1)
if min(r)==a:
	print("regular")
elif min(r)==b:
	print("ortopedico")
elif min(r)==c:
	print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:19:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=(r)[0]
b=(r)[1]
c=(r)[2]
a1=round((a),1)
b1=round((b),1)
c1=round((c),1)
print("regular:",a1)
print("ortopedico:",b1)
print("infantil:",c1)
if min(r)==a:
	print("regular")
elif min(r)==b:
	print("ortopedico")
elif min(r)==c:
	print("infantil")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:19:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
mt=array(eval(input("insira um vetor de entrada: ")))
c=array([[50,60,40],[30,40,20],[10,15,8]])
r= dot(inv(c),mt.T)
a=(r)[0]
b=(r)[1]
c=(r)[2]
a1=round((a),1)
b1=round((b),1)
c1=round((c),1)
print("regular:",a1)
print("ortopedico:",b1)
print("infantil:",c1)
if min(r)==a:
	print("regular")
elif min(r)==b:
	print("ortopedico")
elif min(r)==c:
	print("infantil")
-- EXECUTION TIME:
1.06815
-- TEST CASE 1:
---- input:
[623980,350700,134591]
---- correct output:
regular: 1212.0
ortopedico: 3265.0
infantil: 9187.0
regular
---- user output:
regular: 1212.0
ortopedico: 3265.0
infantil: 9187.0
regular
-- TEST CASE 2:
---- input:
[375920,219120,80734]
---- correct output:
regular: 2532.0
ortopedico: 1850.0
infantil: 3458.0
ortopedico
---- user output:
regular: 2532.0
ortopedico: 1850.0
infantil: 3458.0
ortopedico
-- TEST CASE 3:
---- input:
[994800,620500,221415]
---- correct output:
regular: 9650.0
ortopedico: 7485.0
infantil: 1580.0
infantil
---- user output:
regular: 9650.0
ortopedico: 7485.0
infantil: 1580.0
infantil
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
